updates to Frostys css

--- a/Restaurant site/Index.html
+++ b/Restaurant site/Index.html
@@ -9,33 +9,35 @@ and open the template in the editor.
         <title>Frosty's Donuts</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="restaurantStyles.css">
     </head>
     <body>
         <div>
     <h1 style="text-align:center;"><b>Frosty's Donuts</b></h1>
             
-   <div id = "ContentArea" style="color: black;border-style:solid; border-color:black;"> 	<a href="index.html">Home</a>
-	<a href="Menu.html">Menu</a>
-    <a href="Contact.html">Contact</a> </div>
+   <div id = "ContentArea"style = "border-style:solid"; "border-color:black";> 	<a id ="xyz" href="index.html"style = "color:black";>Home</a>
+	<a id ="xyz"href="Menu.html">Menu</a>
+    <a id ="xyz" href="Contact.html">Contact</a> </div>
 	
 	<br>
     	<br>
 		
 			<br>
-   <center> <img src="Images\Frostys.jpg"alt="description" height="300" width="400"></center>
+   <img class = "mainpic" src="Images\Frostys.jpg"alt="description" >
    <Br>
    <Br>
    
    <h3 style="text-align:center;">Frosty's Donuts History</h3>
    
-   <div id = "ContentArea" style="color: black;border-style:solid; border-color:black;"><p style="text-align:center;"> Back in 1950 Mr Frost started a Donut Shop in Brunswick Maine .sdsadsad
+   <div id = "ContentArea2" style="color: black;border-style:solid; border-color:black;"><p style="text-align:center;"> Back in 1950 Mr Frost started a Donut Shop in Brunswick Maine .sdsadsad
    sdsadsaddddddddddddddddddddddddddddddddddddddddddddddddddddddddaasdsads
    adassssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
    addddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p></div>
    
    <br>
- <h3 style="text-align:center;">  123 Main St, Brunswick, Maine, 04011 </h3><br>
-  <h3 style="text-align:center;"> 207-222-1234 </h3>
+ <footer>  123 Main St, Brunswick, Maine, 04011 <br>
+  207-222-1234</footer>
+ 
  
  
    
