fixed frostys alignment issue

--- a/Restaurant site/Contact.html
+++ b/Restaurant site/Contact.html
@@ -25,17 +25,17 @@ and open the template in the editor.
 	<br>
     	<br>
          <div>
-	<form action="fakePage.html" method="POST">
+	<form action="fakePage.html" method="POST" style= "justify-content: space-evenly;" >
          
-            First Name: 
+            <label>First Name: </label>
                 <input type="text" name="myTextInput" >
             <br>
             <br>
-            Last Name:
+            <label>Last Name:</label>
                 <input type="text" name="myTextInput">
              <br>
              <br>
-            Phone:
+            <label>Phone:</label>
                 <input type="text" name="myTextInput">
              <br>
              <br/>
