fixed frosty history

--- a/Restaurant site/Index.html
+++ b/Restaurant site/Index.html
@@ -29,10 +29,9 @@ and open the template in the editor.
    
    <h3 style="text-align:center;">Frosty's Donuts History</h3>
    
-   <div id = "ContentArea2" style="color: black;border-style:solid; border-color:black;"><p style="text-align:center;"> Back in 1950 Mr Frost started a Donut Shop in Brunswick Maine .sdsadsad
-   sdsadsaddddddddddddddddddddddddddddddddddddddddddddddddddddddddaasdsads
-   adassssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-   addddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p></div>
+   <div id = "ContentArea2" ><p style= "color: black;border-style:solid; border-color:black;text-align:center; margin-right:20%;margin-left:20%;"> Frosty’s Donut Shop was established in 1965 in Brunswick, Maine by Bob and June Frost. Their famous donuts and welcoming atmosphere led to a faithful following of customers who made a stop at Frosty’s a part of their daily routine or reason for a special trip to Brunswick. Over the past 50 years, Frosty’s has become regarded as an “iconic institution” in the community and has attained regional and national recognition by Downeast, Travel & Leisure, and Saveur magazines.
+
+In the fall of 2011 loyal customers, Nels and Shelby Omdal, purchased Frosty’s. Nels, with a background in food production and restaurant management, and Shelby, with experience in business and finance, knew that they had the skills and drive needed to make Frosty’s a success in Brunswick and the vision for growth. Frosty’s now operates four retail locations throughout Maine and delivers their delectable breakfast items to over 40 locations throughout the state.</p></div>
    
    <br>
  <footer>  123 Main St, Brunswick, Maine, 04011 <br>
