--- a/Restaurant site/Contact.html
+++ b/Restaurant site/Contact.html
@@ -28,15 +28,15 @@ and open the template in the editor.
 	<form action="fakePage.html" method="POST" style= "justify-content: space-evenly;" >
          
             <label>First Name: </label>
-                <input type="text" name="myTextInput" >
+                <input style= "display: inline-block;float: left;" type="text" name="myTextInput" >
             <br>
             <br>
             <label>Last Name:</label>
-                <input type="text" name="myTextInput">
+                <input style= "display: inline-block;float: left;" type="text" name="myTextInput">
              <br>
              <br>
             <label>Phone:</label>
-                <input type="text" name="myTextInput">
+                <input style= "display: inline-block;float: left;" type="text" name="myTextInput">
              <br>
              <br/>
              
