album with background

--- a/Album Lab/index2112.html
+++ b/Album Lab/index2112.html
@@ -15,14 +15,30 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href=" albumStyles.css">
 		  <style>
-            caption {font-weight: bold;}
+            caption 
+			{font-weight: bold;
+			 }
+				
         </style>
 		
 		
     </head>
-    <body>
-    <center><img src="C:\Users\n0053240\Desktop\GoForCode\IntroToWebDevelopment\Homework\Album Lab\Images/2112.jpg"Style ="width: 200px"/></center>
-    <center><h1>2112</h1></center>
+    <body ">
+	
+
+	
+   <!--<center><img src="Images\2112.jpg"Style ="width: 200px"/></center>-->
+   
+  <center><div  style="background-image: url('2112.jpg'); height:300px; width:300px;">
+  <br>
+    <br>
+    <br>
+  
+  <img src="Images\2112.jpg"Style ="width: 200px; "bottom: 600px";/> </div></center>
+   
+ 
+   
+   <center><h1>2112</h1></center>
     <div id = "ContentArea" style="color: blue;"><center><h2>RUSH</h2></center> </div>
     <center><h4>Released: April 1 1976</h4></center>
     <center><H2>Band Members and Producers</H2></center>
@@ -32,7 +48,7 @@ and open the template in the editor.
         <li>Getty Lee - Bass, </li>
         <li>Alex Lifeson - Guitar,</li>
         <li>Neil Peart- Drums</li>
-    </UL>
+    </UL> 
     
     <center><table border= "1">
         <caption>Tracks</caption>
