Updated frostys with background

--- a/Restaurant site/Menu.html
+++ b/Restaurant site/Menu.html
@@ -33,8 +33,8 @@ and open the template in the editor.
 	 <br>
 	  <br>
 	  
-	   <div id = "ContentArea2" style="color: black;border-style:solid; border-color:black;">
-     <table>
+	   <div id = "ContentArea2" style="color: black;border-style:solid; border-color:black;background-color:bisque;">
+   <table>
             
             <!--This is the table heading -->
             <thead>
