Changes to frostys new beverage table

--- a/Restaurant site/Index.html
+++ b/Restaurant site/Index.html
@@ -15,7 +15,7 @@ and open the template in the editor.
         <div>
     <h1 style="text-align:center;"><b>Frosty's Donuts</b></h1>
             
-   <div id = "ContentArea"style = "border-style:solid"; "border-color:black";> 	<a id ="xyz" href="index.html"style = "color:black";>Home</a>
+   <div id = "ContentArea"style = "border-style:solid"; "border-color:black";> 	<a id ="xyz" href="index.html";>Home</a>
 	<a id ="xyz"href="Menu.html">Menu</a>
     <a id ="xyz" href="Contact.html">Contact</a> </div>
 	
