--- a/Album Lab/index2112.html
+++ b/Album Lab/index2112.html
@@ -35,8 +35,9 @@ and open the template in the editor.
     <br>
   
   <img src="Images\2112.jpg"Style ="width: 200px; "bottom: 600px";/> </div></center>
+  <br>
    
- 
+ <center><a href= "https://www.rush.com/band/" target="_blank">Rush</a></center>
    
    <center><h1>2112</h1></center>
     <div id = "ContentArea" style="color: blue;"><center><h2>RUSH</h2></center> </div>
@@ -64,7 +65,7 @@ and open the template in the editor.
             </tr>
         </thead>
         
-        <tbody  style="font-weight: bold";>
+        <tbody  style="font-weight:";>
             <tr>
                 <td>1</td>
                 <td>Temple of Syrinx</td>
